chore: decouple common-test from tracking (#373)